red-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: red-deployment
spec:
  replicas: 5
  selector:
    matchLabels:
      app: color-app
      version: blue
  template:
    metadata:
      labels:
        app: color-app
        version: blue
    spec:
      containers:
      - name: color-app
        image: muritala/color-dance:v1.1
