green-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: green-service
spec:
  selector:
    app: color-app
    version: green
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
