red-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: red-service
spec:
  selector:
    app: color-app
    version: red
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
